Fix spacing for the form and update the html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1473,6 +1473,7 @@ header {
 
 .contact {
   position: absolute;
+  display: flex;
   width: 100%;
   height: 779px;
   left: 0;
@@ -1481,6 +1482,8 @@ header {
 }
 
 .contact-form {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 779px;
   left: 0;
@@ -1522,8 +1525,8 @@ header {
   line-height: 28px;
   text-align: center;
   color: #ebebff;
-  margin: 20px; 
-  justify-items: center; 
+  margin: 20px;
+  justify-items: center;
 }
 
 .form-content {
@@ -1561,13 +1564,16 @@ form textarea {
   font-style: normal;
   font-weight: normal;
   font-size: 15px;
+  margin: 10px 0;
 }
 
 form button {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   padding: 20px 16px;
+  margin-top: 24px;
   position: absolute;
   width: 140px;
   height: 48px;
@@ -1586,6 +1592,7 @@ form button {
   letter-spacing: 0.03em;
   color: #6070ff;
   border: 1px solid #cfd8dc;
+  cursor: pointer;
 }
 
 form button:hover {
